--- a/Passagens/app.config
+++ b/Passagens/app.config
@@ -12,27 +12,29 @@
   <system.serviceModel>
     <services>
       <service name="Passagens.ClienteService">
-        <endpoint address="clienteweb" behaviorConfiguration="web" binding="webHttpBinding"
-          bindingConfiguration="" contract="Passagens.IClienteService" />
-        <endpoint address="cliente" binding="basicHttpBinding" bindingConfiguration=""
-          contract="Passagens.IClienteService" />
+        <endpoint address="cliente" binding="basicHttpBinding" contract="Passagens.IClienteService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8080" />
+            <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
-      <endpointBehaviors>
-        <behavior name="web">
-          <webHttp />
-        </behavior>
-      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior name="">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+        <behavior>
+          <!-- To avoid disclosing metadata information, 
+          set the values below to false before deployment -->
+          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
+          <!-- To receive exception details in faults for debugging purposes, 
+          set the value below to true.  Set to false before deployment 
+          to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="False" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
