--- a/Passagens/app.config
+++ b/Passagens/app.config
@@ -17,24 +17,25 @@
             <dns value="localhost" />
           </identity>
         </endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <endpoint address="clienteweb" behaviorConfiguration="web" binding="webHttpBinding"
+          bindingConfiguration="" contract="Passagens.IClienteService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8733/Design_Time_Addresses/WcfServiceLibrary1/Service1/" />
+            <add baseAddress="http://localhost:8080" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="web">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- To avoid disclosing metadata information, 
-          set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="True" httpsGetEnabled="True"/>
-          <!-- To receive exception details in faults for debugging purposes, 
-          set the value below to true.  Set to false before deployment 
-          to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="False" />
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
